# pymigrate

./: .gitignore  LICENSE  README.md  pyproject.toml
pymigrate/: main.py
pymigrate/databases/: database_abstraction.py  db_handlers.py  mongo_handler.py
pymigrate/parser/: parser.py
pymigrate/rule_engine/: mongo_ruleengine.py  rule_handler.py  ruleengine.py
pymigrate/utils/: utils.py
